[package]
name = "p1"
version = "0.1.0"
authors = ["Kenan Sulayman <kenan@sly.mn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = "=0.3.0-alpha.19"

telegram-bot = { path = "./telegram-bot/lib" }
telegram-bot-raw = { path = "./telegram-bot/raw" }

tokio = "0.2.0-alpha.5"

[profile]

[profile.dev]
codegen-units = 3
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = true

[profile.release]
codegen-utis = 1
lto = true
debug = false
debug-assertions = false
opt-level = 3
panic = "abort"
rpath = true
