[package]
name = "artemis"
version = "0.1.0"
authors = ["Kenan Sulayman <kenan@sly.mn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["time", "rt-threaded", "macros"] }
futures = "0.3.5"
telegram-bot = "0.7.0"
telegram-bot-raw = "0.7.0"

[profile]

[profile.dev]
codegen-units = 3
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = true

[profile.release]
codegen-utis = 1
lto = true
debug = false
debug-assertions = false
opt-level = 3
panic = "abort"
rpath = true
